i18n refactor for preferences